# TinyTools

./: .gitignore  BUILD_APK_LOCALLY.md  DELIVERY_SUMMARY.md  DEPLOY_NOW.md  INVESTOR_GUIDE.md  LICENSE  PHASE_M3_COMPLETION.md  PITCH.md  README.md  README_VC.md  SECURITY.md  SUPABASE_QUICK_START.md  VC_READINESS_CHECKLIST.md  index.html  manifest.webmanifest  registerSW.js  sw.js
AgentStandup/: README.md
AutonomousMemoryEngine/: AutonomousMemoryEngine.csproj  BinaryWireProtocol.cs  ContextCompiler.cs  README.md  TcpPipelineGateway.cs  TemporalLog.cs
CmdLog/: README.md  cmdlog.py
CodeBlaster/: README.md  codeblaster.html
CopyToLLM/: AppLogic.cs  CopyToLLM.csproj  PayloadDelivery.cs  Program.cs  README.md  ScrollCaptureEngine.cs  SnippingOverlayForm.cs  UIElementCapture.cs
HistView/: README.md  histview.py
JumpDir/: README.md  install.sh  j.bat  jumpdir.py
MarkdownZipped/: README.md  mdzip.py
MeetingCopilot/: AGENTS.md  CLAUDE.md  LICENSE  README.md  cli.js  forge.config.js  package-lock.json  package.json
MemoryEngine.Benchmarks/: MemoryEngine.Benchmarks.csproj  Program.cs
Olus/: .gitignore  README.md
Olus/src-tauri/: Cargo.toml  tauri.conf.json
Olus/src-tauri/.cargo/: config.toml
Olus/src-tauri/capabilities/: default.json
Olus/src-tauri/src/: lib.rs  main.rs
Perch/: .env  .gitignore  CLAUDE.md  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
Sift/: CLAUDE.md  LICENSE  README.md  SIFT_BUILD.md  SIFT_SPEC.md  index.html  package-lock.json  package.json  vite.config.ts
(+308 files in other folders)
