[package]
name = "olus"
version = "0.1.0"
description = "A featherweight browser on the Chromium (WebView2) engine"
edition = "2021"
rust-version = "1.77"

[lib]
name = "olus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
# Disable debuginfo entirely: on commit-constrained machines the PDB writer
# (mspdbcore) exhausts the commit limit and link.exe fails with LNK1171.
debug = 0
strip = "debuginfo"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
